--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^2.6.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "mssql": "^5.1.0",
+    "tedious": "^5.0.3"
   }
 }
